fixed footer, increased header letter spacing

--- a/main.css
+++ b/main.css
@@ -32,12 +32,13 @@ a.active {
 
 h1, h2 {
   color: #D81E5B;
+  font-weight: 400;
+  letter-spacing: 1px;
 }
 
 
 h1 {
   font-family: 'Raleway', 'Verdana', sans-serif;
-  font-weight: bold;
   margin: 20px 0px;
 }
 
@@ -64,8 +65,9 @@ img.portrait {
 
 /* FOOTER */
 
+/* footer at the bottom of the page while scrolling */
 .nav-footer {
-  position: absolute;
+  position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -75,12 +77,26 @@ img.portrait {
   background-color: #BFC0BE;
 }
 
+/* footer at the bottom of the page after scrolling */
+/*
+.nav-footer {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 80px;
+  bottom: 0;
+  background-color: #BFC0BE;
+}*/
+
 .updated {
   display: inline-block;
   width: 26%;
   font-size: 0.8em;
   padding-left: 2%;
-  padding-right: 2%;
+  padding-right: 2;
+  letter-spacing: 0.7px;
 }
 
 .updated p {
